syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Student {
	rpc GetStudentInfo (StudentLookupModel) returns (StudentModel);
	rpc GetAllStudents (EmptyRequest) returns (stream StudentModel);
	rpc GetAllStudentIds (EmptyRequest) returns (stream StudentLookupModel);
	rpc GetAllStudentsFromExcel (ExcelRequest) returns (stream StudentModel);
}

message EmptyRequest {

}

message ExcelRequest{
	string file_path = 1;
}

message StudentLookupModel {
	int32 id = 1;
}

message StudentModel {
	string first_name = 1;
	string last_name = 2;
	string gender = 3;
	int32 age = 4;
	string email_address = 5;
	string phone_number = 6;
	string school = 7;
}

